<resources>
    <string name="app_name">bascketBall</string>
    <string name="team_a">Team A</string>
    <string name="teamAScore">0</string>
    <string name="addthree">+3 Points</string>
    <string name="addTwo">+2 Points</string>
    <string name="addOne">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="scoreBTeam">0</string>
    <string name="addThreeB">+3 Points</string>
    <string name="addTwoB">+2 Points</string>
    <string name="addOneB">Free Throw</string>
    <string name="reset">Reset</string>
</resources>