<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/scoreTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamAScore"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addthree"
        android:onClick="addThreeForTeamA" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTwo"
        android:onClick="addTwoForTeamA" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addOne"
        android:onClick="addOneForTeamA" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_b"
        android:layout_marginTop="23dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/scoreTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreBTeam"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addThreeB"
        android:onClick="addThreeForTeamB"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTwoB"
        android:onClick="addTwoForTeamB"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addOneB"
        android:onClick="addOneForTeamB"/>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="reset"/>
</LinearLayout>
